--- a/assignment2/css/style.css
+++ b/assignment2/css/style.css
@@ -1,1 +1,54 @@
+* {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
+    body {
+      font-family: 'Outfit', sans-serif;
+      background-color: hsl(212, 45%, 89%); /* Slate 300 */
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .card {
+      background-color: hsl(0, 0%, 100%); /* White */
+      max-width: 320px;
+      padding: 16px;
+      border-radius: 20px;
+      box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.05);
+      text-align: center;
+    }
+    
+    .qr-code {
+      width: 288px;
+      height: 288px;
+      border-radius: 10px;
+      margin-bottom: 22px;
+    }
+    
+    h1 {
+      color: hsl(218, 44%, 22%); /* Slate 900 */
+      font-size: 22px;
+      font-weight: 700;
+      margin-bottom: 16px;
+      padding: 0 16px;
+    }
+    
+    p {
+      color: hsl(216, 15%, 48%); /* Slate 500 */
+      font-size: 15px; /* As specified in style guide */
+      font-weight: 400;
+      padding: 0 20px;
+      margin-bottom: 24px;
+      line-height: 1.3;
+    }
+
+    /* Media query for mobile design */
+    @media (max-width: 375px) {
+      .card {
+        margin: 0 24px;
+      }
+    }
